--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <!-- HEADER -->
 <header>
-  <div class="logo">🍽️ Devtaa Restaurant</div>
+  <div class="logo">
+     <img src="logo.png" alt="Devtaa Restaurant Logo" style="height:75px; vertical-align:middle; margin-right:8px;">Devtaa Restaurant</div>
   <nav>
     <a href="#home">Home</a>
     <a href="#menu">Menu</a>
@@ -22,7 +23,7 @@
 <section id="home" class="hero">
   <div class="hero-text">
     <h1>Authentic Flavors of India</h1>
-    <p>Who needs coffee when you can kickstart your week with our Special Chicken Dum Biryani?</p>
+    <p></p>
     <a href="#menu" class="btn">View Menu</a>
   </div>
 </section>
@@ -33,108 +34,338 @@
 
   <!-- Biryani -->
   <div class="menu-category">
-    <h3>🥘 Biryani</h3>
+    <h3>Soup 🥣</h3>
     <ul>
-      <li>🔴 Chicken Dum Biryani - ₹249</li>
-      <li>🔴 Spl. Chicken Biryani (Boneless) - ₹299</li>
-      <li>🟡 Egg Biryani - ₹199</li>
-      <li>🔴 Mutton Biryani - ₹399</li>
-      <li>🔴 Kheema Biryani - ₹299</li>
-      <li>🔴 Chicken 65 Biryani - ₹299</li>
-      <li>🔴 Fish Biryani - ₹369</li>
-      <li>🟢 Veg Biryani - ₹249</li>
-      <li>🟢 Paneer Biryani - ₹299</li>
+      <li> Munakkada mukkala charu - ₹139</li>
+      <li> Veg Sweet corn - ₹139</li>
+      <li> Cream mushroom - ₹139</li>
+      <li> Cream of Chicken - ₹169</li>
+      <li> Lemon Corrionder Soup - ₹139</li>
+      <li> Chicken Lemon Soup - ₹169</li>
+      <li> Pata Shorba Soup - ₹199</li>
+      <li> Kodi Shorba - ₹169</li>
+      <li> Mutton Muraghu Shorba - ₹199</li>
     </ul>
   </div>
 
   <!-- Starters -->
   <div class="menu-category">
-    <h3>🍢 Non-Veg Starters</h3>
+    <h3> Veg Starters</h3>
     <ul>
-      <li>🔴 Chicken 65 - ₹299</li>
-      <li>🔴 Lovely Chicken - ₹299</li>
-      <li>🔴 Yogi Chicken - ₹299</li>
-      <li>🔴 Bangla Kodi - ₹299</li>
-      <li>🔴 Chicken Drum Stick - ₹299</li>
-      <li>🔴 Kajju Chicken Pakoda - ₹349</li>
-      <li>🔴 Hyderabadi Chicken - ₹299</li>
-      <li>🔴 Apollo Fish - ₹349</li>
-      <li>🔴 Chilli Egg - ₹199</li>
+      <li> Cripy Corn - ₹199</li>
+      <li> Panner 65 - ₹249</li>
+      <li> Paneer Manchurian - ₹249</li>
+      <li> Paneer Chilli - ₹249</li>
+      <li> Mokka Jonna Wada - ₹249</li>
+      <li> Green Peace Koju Wada - ₹249</li>
+      <li> Paneer Majestic - ₹249</li>
+      <li> Ba** Corn Manchurian - ₹249</li>
+      <li> Crispy f** babt Corn - ₹249</li>
+      <li> Mushroom Manchurian - ₹249</li>
+      <li> Chilli Baby Corn - ₹249</li>
+      <li> Chilli Mushroom  - ₹249</li>
+      <li> Gobi Manchurian - ₹199</li>
+      <li> Chilli Gobi  - ₹199</li>
+      <li> Bangla Paneer - ₹249</li>
+      <li> Mushroom 65 - ₹249</li>
+      <li> Gobi 65 - ₹199</li>
     </ul>
   </div>
 
   <div class="menu-category">
-    <h3>🥦 Veg Starters</h3>
+    <h3> Veg Tandoori</h3>
     <ul>
-      <li>🟢 Crispy Corn - ₹249</li>
-      <li>🟢 Veg Manchurian Dry - ₹249</li>
-      <li>🟢 Paneer 65 - ₹249</li>
-      <li>🟢 Baby Corn Manchurian - ₹249</li>
+      <li> Paneer Tikka Tandoori- ₹269</li>
+      <li> Malai Brocoli Tandoori - ₹269</li>
+      <li> Hara Bora Kabab - ₹269</li>
+      <li> Multani Paneer Tikka - ₹299</li>
+       <li> Mushroom Tikka Tandoori- ₹269</li>
     </ul>
   </div>
 
   <!-- Non-Veg Curries -->
   <div class="menu-category">
-    <h3>🍛 Non-Veg Curries</h3>
+    <h3> Non-Veg Tandoori</h3>
     <ul>
-      <li>🔴 Chicken Tikka Masala - ₹299</li>
-      <li>🔴 Butter Chicken - ₹299</li>
-      <li>🔴 Andhra Chicken Curry - ₹299</li>
-      <li>🔴 Mutton Rogan Josh - ₹359</li>
-      <li>🔴 Natu Kodi Pulusu - ₹359</li>
+      <li> Afghani Chicken Tikka - ₹299</li>
+      <li> Chicken Lazeez Tikka - ₹299</li>
+      <li> Chicken Angara Kebab - ₹299</li>
+      <li> Tangdi Kebab - ₹349</li>
+      <li> Lemon Fish Tikka- ₹299</li>
+      <li> Chiken Tikka- ₹299</li>
+      <li> Murghu Malai Kebab - ₹349</li>
+      <li> Tandoori Chicken - ₹299</li>
     </ul>
   </div>
 
   <!-- Chinese -->
   <div class="menu-category">
-    <h3>🍜 Chinese</h3>
+    <h3>Non-veg Starters</h3>
     <ul>
-      <li>🟢 Veg Fried Rice - ₹159</li>
-      <li>🟡 Egg Fried Rice - ₹169</li>
-      <li>🔴 Chicken Fried Rice - ₹199</li>
-      <li>🟢 Veg Noodles - ₹159</li>
-      <li>🔴 Chicken Noodles - ₹199</li>
+      <li> Chicken 65 - ₹279</li>
+      <li> Bangla Kadi - ₹279</li>
+      <li> Schezwan Chicken - ₹279</li>
+      <li> Yoga Chicken - ₹279</li>
+      <li> Zinger Chicken  - ₹279</li>
+      <li> Hong Kong Chicken - ₹279</li>
+      <li> Chicken 555 - ₹299</li>
+      <li> Black Pepper Chicken - ₹279</li>
+      <li> Chicken Drum Stick - ₹279</li>
+      <li> Kaju Chicken Pokoda - ₹299</li>
+      <li> Hyderbad Chicken pokoda - ₹279</li>
+      <li> Chicken Majestic - ₹279</li>
+      <li> Nalgonda Mutton Fry - ₹349</li>
+      <li> Hyderbad Mutton Roast - ₹349</li>
+      <li> Chicken Lollipop - ₹349</li>
+      <li> Army Chicken - ₹299</li>
+      <li> Lemon Chicken - ₹299</li>
+      <li> Kothameera Kodi - ₹299</li>
+
     </ul>
   </div>
 
   <!-- Breads -->
   <div class="menu-category">
-    <h3>🥖 Breads</h3>
+    <h3> Sea-Food Staters</h3>
     <ul>
-      <li>🟢 Phulka - ₹29</li>
-      <li>🟢 Butter Naan - ₹39</li>
-      <li>🟢 Garlic Naan - ₹49</li>
-      <li>🟢 Aloo Paratha - ₹50</li>
-      <li>🟢 Kheema Naan - ₹99</li>
+      <li> Butter Garlic Prawns - ₹349</li>
+      <li> Black pepper Prawns - ₹349</li>
+      <li> Schezwan prawns - ₹349</li>
+      <li> Apollo Fish - ₹349</li>
+      <li> Basha Fish - ₹349</li>
+      <li> Chilli Fish - ₹349</li>
     </ul>
   </div>
 
   <!-- Desserts & Drinks -->
   <div class="menu-category">
-    <h3>🍨 Desserts</h3>
+    <h3>Kids Favorites</h3>
     <ul>
-      <li>🟢 Gulab Jamun - ₹79</li>
-      <li>🟢 Qubani Ka Meetha - ₹79</li>
-      <li>🟢 Apricot Delight - ₹169</li>
+      <li> French Fries- ₹99</li>
+      <li> Chicken Biscuits - ₹299</li>
+      <li> Dead Chicken - ₹299</li>
+      <li> Crunchy Panner  - ₹249</li>
+      <li> Crunchy Chicken - ₹269</li>
     </ul>
   </div>
 
   <div class="menu-category">
-    <h3>🥤 Drinks</h3>
+    <h3> Biryani Non-Veg</h3>
     <ul>
-      <li>🟢 Vanilla Milkshake - ₹119</li>
-      <li>🟢 Mango Milkshake - ₹119</li>
-      <li>🟢 Butter Milk - ₹79</li>
-      <li>🟢 Seasonal Fresh Juice - ₹99</li>
+      <li> Chicken Dum Biryani - ₹264</li>
+      <li> Egg biryani - ₹219</li>
+      <li> Mutton Biryani- ₹369</li>
+      <li> Chicken Lollipop Biryani - ₹299</li>
+      <li> Chicken Fry Piece Biryani - ₹289</li>
+      <li> Prawns Biryani - ₹359</li>
+      <li> Special Chicken Biryani - ₹299</li>
+      <li> Natkodi Biryani - ₹359</li>
+      <li> Nalla Karam Kodi Biryani - ₹**</li>
+      <li> Chicken Gogura Biryani - ₹299</li>
     </ul>
   </div>
+
+   <div class="menu-category">
+    <h3> Puloa Non-Veg</h3>
+    <ul>
+      <li> Chicken Gongura - ₹249</li>
+      <li> Mutton Gongura - ₹349</li>
+      <li> Chicken Ghee Roast- ₹259</li>
+      <li> Chicken fry piece puloa- ₹259</li>
+      <li> Mutton Ghee Roat - ₹349</li>
+      <li> Natukodi Puloa - ₹349</li>
+      <li> Godavari Royala Vepudu Puloa - ₹399</li>
+      <li> Fry Fish Puloa - ₹299</li>
+    </ul>
+  </div>
+
+  <div class="menu-category">
+    <h3> Puloa Veg</h3>
+    <ul>
+      <li> Kaju - ₹249</li>
+      <li> Paneer - ₹249</li>
+      <li> Mushroom - ₹249</li>
+      <li> Kaju Paneer - ₹249</li>
+      <li> Kaju mushroom - ₹249</li>
+      <li> Gonguru Veg - ₹199</li>
+      <li> Gonguru Puloa - ₹149</li>
+    </ul>
+  </div>
+
+  <div class="menu-category">
+    <h3> Biryani Veg</h3>
+    <ul>
+      <li> Paneer Biryani - ₹249</li>
+      <li> Mushroom Biryani - ₹249</li>
+      <li> Kaju Briyani - ₹249</li>
+      <li> veg Biryani - ₹209</li>
+    </ul>
+  </div>
+
+    <div class="menu-category">
+    <h3> Curries Non-Veg</h3>
+    <ul>
+      <li> Andhra Chicken Curry - ₹299</li>
+      <li> Punjabi Chicken Curry - ₹299</li>
+      <li> Natukodi Curry - ₹359</li>
+      <li> Mutton Curry - ₹359</li>
+      <li> Mutton Rogan Josh - ₹249</li>
+      <li> Gongura Chicken Curry B/L - ₹299/319</li>
+      <li> Egg Masala Curry - ₹149</li>
+      <li> Kaju Chicken Curry - ₹399 </li>
+      <li> Kadai Chicken Curry - ₹299 </li>
+      <li> Mogalai Chicken Curry - ₹299/319</li>
+      <li> Butter Chicken - ₹299 </li>
+    </ul>
+  </div>
+
+    <div class="menu-category">
+    <h3> Curries Veg</h3>
+    <ul>
+      <li> Paneer Butter Masala - ₹249</li>
+      <li> Meti Chaman - ₹249</li>
+      <li> Kadai veg - ₹249</li>
+      <li> Mix-veg Curry  - ₹249</li>
+      <li> Mushroom Masala - ₹249</li>
+      <li> Kaju Tomato Curry - ₹259 </li>
+      <li> Dal Tadaka - ₹209 </li>
+      <li> Kadai Paneer - ₹249</li>
+    </ul>
+  </div>
+
+  <div class="menu-category">
+    <h3> Chinese Fried Rice</h3>
+    <h4> Non-veg & Veg </h4>
+    <ul>
+      <li> Egg Fried Rice - ₹169</li>
+      <li> Chicken Fried Rice - ₹199</li>
+      <li> Schezwan Fried Rice(Chicken/Egg/Veg) - ₹199/₹169/₹159</li>
+      <li> Noodles(Chicken/Egg/Veg)  - ₹199/₹169/₹159</li>
+    </ul>
+  </div>
+
+
+    <div class="menu-category">
+    <h3> Roti</h3>
+    <ul>
+      <li> Phulka - ₹29</li>
+      <li> Tandoori Roti - ₹39</li>
+      <li> Butter Roti - ₹39</li>
+      <li> Plain Naan  - ₹49</li>
+      <li> Butter Naan - ₹45</li>
+      <li> Garlic Naan - ₹59</li>
+      <li> Aloo porota - ₹69</li>
+      <li> Methi Naan - ₹69</li>
+      <li> Kathimeera Naan - ₹49</li>
+      <li> Kulcha Naan - ₹49</li>
+      <li> Paneer Kulcha - ₹69</li>
+    </ul>
+  </div>
+
+   <div class="menu-category">
+    <h3> Bangla Combo - ₹1299</h3>
+    <ul>
+      <li> Bangla Kadi </li>
+      <li> Bangla Paneer </li>
+      <li> Special Chicken Biryani</li>
+      <li> Kaju Biryani</li>
+      <li> Hong Kong Chicken</li>
+      <li> 4 - Drinks </li>
+    </ul>
+  </div>
+
+     <div class="menu-category">
+    <h3> South-Indian Combo -₹1299 </h3>
+    <ul>
+      <li> Gongura Kadi </li>
+      <li> Ulavacharu Paneer </li>
+      <li> Chicken Dum Biryani </li>
+      <li> Gongura Veg Puloa</li>
+      <li> Chicken 65</li>
+      <li> 4 - Drinks </li>
+    </ul>
+  </div>
+
+   <div class="menu-category">
+    <h3> Devataa Combo - ₹1399 </h3>
+    <ul>
+      <li> Lolly pop Starter </li>
+      <li> Chicken Curry </li>
+      <li> Butter Naan 2pcs </li>
+      <li> Gongura Veg Puloa</li>
+      <li> Chicken 65</li>
+      <li> 4 - Drinks </li>
+    </ul>
+  </div>
+
+  <div class="menu-category">
+    <h3> Biryani Combo -₹1099 </h3>
+    <ul>
+      <li> Chicken Dum Biryani - 2 </li>
+      <li> Chicken fry Piece Biryani - 2</li>
+      <li> Drinks(250ml)- 4 </li>
+    </ul>
+  </div>
+
+  <div class="menu-category">
+    <h3> Puloa Combo -₹1099 </h3>
+    <ul>
+      <li> Chicken Puloa - 2 </li>
+      <li> Mutton Puloa - 2</li>
+      <li> Drinks(250ml)- 4 </li>
+    </ul>
+  </div>
+
+   <div class="menu-category">
+    <h3> Mocktails</h3>
+    <ul>
+      <li> Virgin Mojito - ₹149 </li>
+      <li> Blue Pineapple - ₹149</li>
+      <li> Rainbow Paradise - ₹149 </li>
+      <li> Gauva Margarita - ₹149</li>
+      <li> Lime Soda - ₹79</li>
+      <li> Fresh Lime Soda - ₹79</li>
+      <li> Lassi - ₹79</li>
+      <li> Butter Milk - ₹79</li>
+    </ul>
+  </div>
+
+   <div class="menu-category">
+    <h3>Milk Shakes</h3>
+    <ul>
+      <li> Vanilla - ₹139 </li>
+      <li> Chocolate - ₹139</li>
+      <li> Strawberry - ₹139 </li>
+      <li> ButterScotch - ₹139</li>
+      <li> Mango - ₹139</li>
+      <li> kesar Pista - ₹139</li>
+      <li> Oreo - ₹149</li>
+      <li> Kit Kat - ₹79</li>
+    </ul>
+  </div>
+
+     <div class="menu-category">
+    <h3>Ice cream </h3>
+    <h5>(2 scoops)</h5>
+    <ul>
+      <li> Vanilla - ₹89 </li>
+      <li> Chocolate - ₹89</li>
+      <li> Strawberry - ₹89 </li>
+      <li> ButterScotch - ₹89</li>
+      <li> Mango - ₹89</li>
+      <li> kesar Pista - ₹89</li>
+    </ul>
+  </div>
+
+
+
 </section>
 
 <!-- CONTACT -->
 <section id="contact" class="contact">
   <h2>Contact Us</h2>
-  <p>📍 123 Flavor Street, City, State</p>
-  <p>📞 +91 98765 43210</p>
+  <p>📍 PLOT NO7, SRINIVASAPURAM COMMERCIAL AREA, Tirupati, Andhra Pradesh 517503</p>
+  <p>📞 +91 7207401110</p>
   <p>📧 info@devtaarestaurant.com</p>
 </section>
 
